--- a/styles/style.css
+++ b/styles/style.css
@@ -661,11 +661,13 @@ a,
 .contactForm .contactFormField {
   border: none;
   border-bottom: 2px solid #4ceea7;
+  border-radius: none;
 }
 
 .commentsForm .commentField,
 .contactForm .contactMessageField {
   border: 2px solid #4ceea7;
+  border-radius: none;
   resize: none;
 }
 
